--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
           <input type="text" id="new-task" placeholder="Add a new task" />
           <button id="add-task">Add Task</button>
         </div>
+        <div>
+            <button id="all">All</button>
+            <button id="comp">Completed</button>
+            <button id="uncomp">Uncompleted</button>
+        </div>
         <ul id="task-list">
           <!-- Tasks will be displayed here -->
         </ul>
